--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>Global Health Infrastructure and Medical Tourism</title>
+	<title>Global Health Infrastructure</title>
 
 	<!-- ADD Libraries-->
 	<script src="libs/d3/d3.min.js" charset="utf-8"></script>
@@ -27,7 +27,7 @@
 
 	<body>
 		<div class="container">
-			<h1>Global Health Infrastructure and medical Tourism</h1>
+			<h1>Global Health Infrastructure</h1>
 
 		<div class="row">
 			<div class="col-md-8 col-sm-12">
