--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 				<b>Visualising Global health infrastructure and Life Expectancy</b>
 			</div>
 			<div class="col-md-2">
-				<a href="#" target="_blank" class="btn btn-primary">Demo</a>
+				<a href="https://youtu.be/tPR8pAarmcs" target="_blank" class="btn btn-primary">Demo</a>
 			</div>
 
 			<div class="col-md-2">
-				<a href="#" target="_blank" class="btn btn-primary" >Process Book</a>
+				<a href="https://drive.google.com/a/g.harvard.edu/file/d/0B0NzPdUoAjc1Z19HNGd5V0JjODQ/view" target="_blank" class="btn btn-primary" >Process Book</a>
 			</div>
 
 		</div>
